[package]
name = "chord-fusion"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Mark Wainwright <wainwrightml@gmail.com>"]
keywords = ["music", "game", "bevy"]

[dependencies]
rand = "0.8.5"
#bevy_oddio = {git = "https://github.com/harudagondi/bevy_oddio"}
bevy_fundsp = {git = "https://github.com/harudagondi/bevy_fundsp"}
bevy_tweening = "0.5.0"
oddio = "0.6.0"
itertools = "0.10.3"
bevy_prototype_lyon = "0.6.0"
bevy_rapier2d = { version = "0.16", features = [ "enhanced-determinism" ] }
console_error_panic_hook = "0.1.7"
smallvec = {version = "1.9.0", features=["union"] } 
array-const-fn-init = "0.1.1"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.27.1", features=["x11"]}

[build-dependencies]
embed-resource = "1.4"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.release]
opt-level = 'z'
lto = 'thin'

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy]
# git = "https://github.com/bevyengine/bevy.git"
version = "0.8"
default-features = false
features = [
  # These are the default features:
  # (keep whichever you like)

  # Bevy functionality:
#   "bevy_gilrs",         # Gamepad input support
#   "bevy_audio",         # Builtin audio
#   "filesystem_watcher", # Asset hot-reloading
  "bevy_winit",         # Window management
  "bevy_asset",
  "x11",                # Linux: Support X11 windowing system
#   "render",             # Graphics Rendering

  ## "render" actually just includes:
  ## (feel free to use just a subset of these, instead of "render")
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Higher-level rendering abstractions
  "bevy_sprite",        # 2D (sprites) rendering
#   "bevy_pbr",           # 3D (physically-based) rendering
#   "bevy_gltf",          # GLTF 3D assets format support
  "bevy_text",          # Text/font rendering
  "bevy_ui",            # UI toolkit

  # File formats:
#   "png",
#   "hdr",
#   "vorbis",

  # These are other features that may be of interest:
  # (add any of these that you need)

  # Bevy functionality:
#   "wayland",              # Linux: Support Wayland windowing system
#   "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
#   "serialize",            # Support for `serde` Serialize/Deserialize

  # File formats:
#   "bmp",
#   "tga",
#   "dds",
#   "jpeg",
#   "wav",
#   "flac",
#   "mp3",

  # Development/Debug features:
#   "dynamic",      # Dynamic linking for faster compile-times
#   "trace",        # Enable tracing for performance measurement
#   "trace_tracy",  # Tracing using `tracy`
#   "trace_chrome", # Tracing using the Chrome format
#   "wgpu_trace",   # WGPU/rendering tracing
]